--- a/static/css/base.css
+++ b/static/css/base.css
@@ -52,3 +52,15 @@ input.submit {
   border-radius: 5px;
   transition: 0.2s ease-in;
 }
+
+main .transactions {
+  list-style: none;
+  padding-left: 0;
+  border: 1px solid grey;
+  border-radius: 5px;
+}
+
+main .transactions li {
+  padding: 10px 0 10px 20px;
+  border-bottom: 1px solid grey;
+}
